# kisu

./: Cargo.toml  README.md  flake.nix  syntax.md
cli/: Cargo.toml
cli/src/: main.rs
src/: ast.rs  deserialize.rs  eval.rs  lexer.rs  lib.rs  parser.rs  types.rs
src/ast/: typed.rs  untyped.rs
src/serialize/: de.rs
tests/: deserialize.rs  parser.rs  run.rs
