[package]
name = "kisu"
version = "0.1.1"
edition = "2024"
description = "Lazy purely functional configuration language"
license = "MIT"
repository = "https://github.com/vesdev/kisu"


[dependencies]
logos = "0.16.0"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[workspace]
members = ["cli"]

[dev-dependencies]
indoc = "2.0.7"
