
[package]
name = "kisu"
version = "0.1.2"
edition = "2024"
description = "Lazy purely functional configuration language"
license = "MIT"
repository = "https://github.com/kisu-is/kisu"


[dependencies]
logos = "0.16.0"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = "2.0.18"

[features]
default = []
serde = ["dep:serde"]

[workspace]
members = ["cli"]

[dev-dependencies]
indoc = "2.0.7"

[[test]]
name = "deserialize"
path = "tests/deserialize.rs"
required-features = ["serde"]
